grid/03-grid-layout-3/style.css
* {
  margin: 0;
  padding: 0;
}

.container {
  display: grid;
  gap: 4px;
  grid-template-columns: 1fr 4fr;
  text-align: center;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
}

.header {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-column: 1 / 3;
  background-color: #393f4d;
  text-align: start;
}

.menu ul {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

.menu ul,
.menu li {
  font-size: 16px;
  list-style-type: none;
  text-align: center;
}

.sidebar {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  grid-row: 2 / 4;
  gap: 50px;
  background-color: #C50208;
}

.sidebar .photo {
  background-color: white;
  color: black;
  font-size: 12px;
  font-weight: normal;
  border-radius: 10px;
}


.sidebar .side-content {
  background-color: white;
  color: black;
  font-size: 16px;
  font-weight: normal;
}

.side-content .photo {
  display: grid;
  align-items: center;
}

.nav {
  background-color: #C50208;
}

.nav ul {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  list-style-type: none;
}

.nav ul li {
  font-size: 16px;
  text-transform: uppercase;
  text-align: center;
}

.article {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-template-rows: 1fr 1fr;
  gap: 10px;
  background-color: #bccbde;
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.article .card {
  background-color: #FFFFFF;
  color: black;
  text-align: center;
  height: 200px;
}

.card p {
  color: black;
  font-weight: normal;
  font-size: 14px;
}

.card .title {
  font-size: 18px;
  text-align: center;
}

.footer {
  background-color: #393f4d;
  grid-column: 1 / 3 ;
}

.footer p {
  font-size: 13px;
  font-weight: normal;
}

